# log-filter

./: .ghci  .gitignore  CHANGELOG.md  LICENSE  log-filter.cabal
app/: Main.hs
src/: AbsSyn.hs  NFA.hs  Output.hs  ParseMonad.hs  Recogniser.hs
src/Data/Ranged/: RangedSet.hs
tests/: DfaSpec.hs  Main.hs
