name: log-filter
version: 0.1.0
-- don't forget updating changelog.md!
license: BSD3
license-file: LICENSE
copyright: (c) Chis Dornan, Simon Marlow, Alan Zimmerman
author: Chris Dornan, Simon Marlow and Alan Zimmerman
maintainer: Alan Zimmerman <alan.zimm@gmail.com>
bug-reports: https://github.com/alanz/log-filter/issues
stability: experimental
homepage: http://github.com/alanz/log-filter
synopsis: log-filter is a library for generating high peformance filters for log lines
description:
  log-filter is a library that takes a list of regular expressions which may
  occur in log lines of interest, and generates a DFA to recognise log lines
  having at least one of these.
category: Development
cabal-version: >= 1.10
build-type: Custom

extra-source-files:
        CHANGELOG.md
        README.md
        TODO

source-repository head
    type:     git
    location: https://github.com/alanz/log-filter.git

library
  exposed-modules:     DFA
                       DFAMin
                       DFS
                       NFA
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:       base
                     , array
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

-- executable alex
--   hs-source-dirs: src
--   main-is: Main.hs

--   if flag(small_base)
--     build-depends: base >= 2.1, array, containers, directory
--   else
--     build-depends: base >= 1.0

--   build-depends: base < 5
--   -- build-depends: Ranged-sets
--   build-depends: QuickCheck >=2

--   extensions: CPP
--   ghc-options: -Wall -rtsopts
--   other-modules:
--         AbsSyn
--         CharSet
--         DFA
--         DFAMin
--         DFS
--         Info
--         Map
--         NFA
--         Output
--         Paths_alex
--         Parser
--         ParseMonad
--         Scan
--         Set
--         Sort
--         Util
--         UTF8
--         Data.Ranged
--         Data.Ranged.Boundaries
--         Data.Ranged.RangedSet
--         Data.Ranged.Ranges

test-suite tests
  type: exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       DfaSpec
  hs-source-dirs:      src tests
  build-depends:       base
                     , hspec

                     , array
                     , containers
                     , QuickCheck
  default-language:    Haskell2010
