name: log-filter
version: 0.1.0
-- don't forget updating changelog.md!
license: BSD3
license-file: LICENSE
copyright: (c) Chis Dornan, Simon Marlow, Alan Zimmerman
author: Chris Dornan, Simon Marlow and Alan Zimmerman
maintainer: Alan Zimmerman <alan.zimm@gmail.com>
bug-reports: https://github.com/alanz/log-filter/issues
stability: experimental
homepage: http://github.com/alanz/log-filter
synopsis: log-filter is a library for generating high peformance filters for log lines
description:
  log-filter is a library that takes a list of regular expressions which may
  occur in log lines of interest, and generates a DFA to recognise log lines
  having at least one of these.
category: Development
cabal-version: >= 1.10
build-type: Custom

extra-source-files:
        CHANGELOG.md
        README.md
        TODO

source-repository head
    type:     git
    location: https://github.com/alanz/log-filter.git

library
  exposed-modules:     DFA
                       DFAMin
                       DFS
                       NFA
                       Recogniser
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:       base
                     , array
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

executable log-filter
  hs-source-dirs:      app src
  main-is:             Main.hs
  build-depends:       base
                     , Cabal
                     , gitrev
                     , optparse-simple

                     -- , log-filter
                     , array
                     , containers
                     , QuickCheck
  -- -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wredundant-constraints
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wredundant-constraints  -fprof-auto
  -- if flag(pedantic)
  --    ghc-options:      -Werror
  default-language:    Haskell2010


test-suite tests
  type: exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       DfaSpec
  hs-source-dirs:      src tests
  build-depends:       base
                     , hspec

                     , array
                     , containers
                     , QuickCheck
  default-language:    Haskell2010
